--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "morgan": "^1.10.0",
         "on-finished": "^2.3.0",
+        "pg": "^8.0.0",
+        "pg-hstore": "^2.3.3",
+        "sequelize": "^5.21.5",
         "winston": "^3.2.1"
     },
     "devDependencies": {
