--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
         "on-finished": "^2.3.0",
         "pg": "^8.0.0",
         "pg-hstore": "^2.3.3",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
         "sequelize": "^5.21.5",
         "winston": "^3.2.1"
     },
@@ -39,13 +37,19 @@
         "clean-webpack-plugin": "^3.0.0",
         "concurrently": "^5.1.0",
         "css-loader": "^3.4.2",
+        "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.0.4",
         "mini-css-extract-plugin": "^0.9.0",
+        "moment": "^2.24.0",
         "node-sass": "^4.13.1",
         "nodemon": "^2.0.2",
         "postcss-loader": "^3.0.0",
         "prettier": "^2.0.2",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-helmet": "^5.2.1",
         "react-hot-loader": "^4.12.20",
+        "react-router-dom": "^5.1.2",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "uglifyjs-webpack-plugin": "^2.2.0",
