--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "babel-polyfill": "^6.26.0",
         "clean-webpack-plugin": "^3.0.0",
         "concurrently": "^5.1.0",
+        "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.4.2",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.0.4",
