--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
         "moment": "^2.24.0",
         "node-sass": "^4.13.1",
         "nodemon": "^2.0.2",
+        "normalize.css": "^8.0.1",
         "postcss-loader": "^3.0.0",
         "prettier": "^2.0.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-flexbox-grid": "^2.1.2",
         "react-helmet": "^5.2.1",
         "react-hot-loader": "^4.12.20",
         "react-router-dom": "^5.1.2",
