--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "css-loader": "^3.4.2",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.0.4",
+        "lodash": "^4.17.15",
         "mini-css-extract-plugin": "^0.9.0",
         "moment": "^2.24.0",
         "node-sass": "^4.13.1",
