--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "react-router-dom": "^5.1.2",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
-        "uglifyjs-webpack-plugin": "^2.2.0",
+        "terser-webpack-plugin": "^2.3.5",
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
