--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
         "react-helmet": "^5.2.1",
         "react-hot-loader": "^4.12.20",
         "react-router-dom": "^5.1.2",
+        "react-select": "^3.1.0",
+        "react-spinners": "^0.8.1",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "terser-webpack-plugin": "^2.3.5",
