--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "babel-loader": "^8.1.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-polyfill": "^6.26.0",
+        "chart.js": "^2.9.3",
         "clean-webpack-plugin": "^3.0.0",
         "concurrently": "^5.1.0",
         "copy-webpack-plugin": "^5.1.1",
@@ -52,6 +53,7 @@
         "postcss-loader": "^3.0.0",
         "prettier": "^2.0.2",
         "react": "^16.13.1",
+        "react-chartjs-2": "^2.9.0",
         "react-dom": "^16.13.1",
         "react-flexbox-grid": "^2.1.2",
         "react-helmet": "^5.2.1",
