Using my own chart library :)

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
         "@hot-loader/react-dom": "^16.13.0",
+        "@jhonnold/react-chart-js": "^1.1.0",
         "autoprefixer": "^9.7.5",
         "babel-loader": "^8.1.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
@@ -55,7 +56,6 @@
         "postcss-loader": "^3.0.0",
         "prettier": "^2.0.2",
         "react": "^16.13.1",
-        "react-chartjs-2": "^2.9.0",
         "react-dom": "^16.13.1",
         "react-flexbox-grid": "^2.1.2",
         "react-helmet": "^5.2.1",
