--- a/package.json
+++ b/package.json
@@ -14,47 +14,25 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.19.0",
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "morgan": "^1.10.0",
-        "on-finished": "^2.3.0",
-        "pg": "^8.0.0",
-        "pg-hstore": "^2.3.3",
-        "sequelize": "^5.21.5",
-        "winston": "^3.2.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.9.0",
-        "@babel/preset-env": "^7.9.0",
-        "@babel/preset-react": "^7.9.4",
         "@fortawesome/fontawesome-svg-core": "^1.2.28",
         "@fortawesome/free-brands-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "@hot-loader/react-dom": "^16.13.0",
-        "@jhonnold/react-chart-js": "^1.1.0",
-        "autoprefixer": "^9.7.5",
-        "babel-loader": "^8.1.0",
-        "babel-plugin-transform-class-properties": "^6.24.1",
+        "@jhonnold/react-chart.js": "^1.0.0",
         "babel-polyfill": "^6.26.0",
+        "body-parser": "^1.19.0",
         "chart.js": "^2.9.3",
-        "clean-webpack-plugin": "^3.0.0",
-        "concurrently": "^5.1.0",
-        "copy-webpack-plugin": "^5.1.1",
-        "css-loader": "^3.4.2",
-        "file-loader": "^6.0.0",
-        "html-webpack-plugin": "^4.0.4",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
         "lodash": "^4.17.15",
-        "mini-css-extract-plugin": "^0.9.0",
         "moment": "^2.24.0",
-        "node-sass": "^4.13.1",
-        "nodemon": "^2.0.2",
+        "morgan": "^1.10.0",
         "normalize.css": "^8.0.1",
-        "postcss-loader": "^3.0.0",
-        "prettier": "^2.0.2",
+        "on-finished": "^2.3.0",
+        "pg": "^8.0.0",
+        "pg-hstore": "^2.3.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-flexbox-grid": "^2.1.2",
@@ -63,6 +41,28 @@
         "react-router-dom": "^5.1.2",
         "react-select": "^3.1.0",
         "react-spinners": "^0.8.1",
+        "sequelize": "^5.21.5",
+        "winston": "^3.2.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.9.0",
+        "@babel/preset-env": "^7.9.0",
+        "@babel/preset-react": "^7.9.4",
+        "@hot-loader/react-dom": "^16.13.0",
+        "autoprefixer": "^9.7.5",
+        "babel-loader": "^8.1.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "clean-webpack-plugin": "^3.0.0",
+        "concurrently": "^5.1.0",
+        "copy-webpack-plugin": "^5.1.1",
+        "css-loader": "^3.4.2",
+        "file-loader": "^6.0.0",
+        "html-webpack-plugin": "^4.0.4",
+        "mini-css-extract-plugin": "^0.9.0",
+        "node-sass": "^4.13.1",
+        "nodemon": "^2.0.2",
+        "postcss-loader": "^3.0.0",
+        "prettier": "^2.0.2",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "terser-webpack-plugin": "^2.3.5",
